Adding more to models section

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -63,3 +63,14 @@ Aviate,
     url = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/},
     howpublished = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/}
 }
+
+@book{
+ Nielsen,
+ author = {Nielsen, Jakob},
+ title = {Usability Engineering},
+ year = {1993},
+ isbn = {0125184050},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+
