--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -64,6 +64,14 @@ Aviate,
     howpublished = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/}
 }
 
+@misc {
+	GoogleNow,
+	author = {Kelly Hodgkins},
+	title = {Google Now brings contextual search and on-the-fly reminders to Android 4.1},
+	url = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/},
+	howpublished = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/}
+}
+
 @book{
  Nielsen,
  author = {Nielsen, Jakob},
