--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -68,9 +68,14 @@ Pfeiffer's second part of their Mobile OS evaluation is a study of "efficiency" 
 \end{figure}
 \subsection{Customization Evaluated}
 The third part of the study dives deep into evaluating the customization merits of the chosen mobile operating systems. Out of all the sections of the evaluative study, according to background information this seems to be the most reliable of the studies. Customization depends on a direct comparison of the given operating system features, and even though measured on a 10 point scale once again, the scores are clearly outlined with a "why." Customization falls under satisfaction, which is why a 10 point scale is a strongly supported metric to use when evaluating customization. Users who are more satisfied with customization should consider an Android phone. Pfeiffer does not explain what low customization means for the user in their evaluation though. If customization is low, the ease of use for apps could become difficult for the user. As ease of use becomes difficult for the user, it can also be difficult to implement apps for developers, as accessing features may be restricted by a lack of customization in the mobile OS. Pfeiffer needs to more clearly present this in their evaluation, as the Background section connects ease of use for consumers with ease of implementation for developers.
+\subsection{User Experience Friction Evaluation}
+This final part of the study attempts to evaluate frustrations users have with mobile operating systems. From an interaction design standpoint, it does not study what Nielsen refers to as "errors" in his usability metrics with a concise approach \cite{Nielsen}. Instead, this part of the study evaluates learnability; if something is hard to figure out, it gives it a high rating, and if easier, it receives a lower score. Therefore, this is not a study in errors as Pfeiffer outlines it to be. Instead, this list of user experience friction is a study in learnability, and which OS is easiest to learn overall. It also irrelevantly points out lacking features when it presents no standard for what features a smartphone should have. For example, the importantance of usefulness in a situation (contextual computing) is not even mentioned in this part of the study. As users become more dependent on mobile operating systems to be contextual, 
 \section{Discussion}
+Overall, I find Pfeiffer Consulting's evaluation of the current state of mobile operating systems to be confusing, incomplete, and lacking in detail. To begin, there is a lack of raw data presented in the study. Arbitrary values are assigned to metrics everywhere, and the unsuspecting reader will take these studies for granted. Pfeiffer does say that they want this to be a simple presentation of usability for average, non-technical users, but anyone interested in true evaluation will have the statistics to back up the data. Since Pfeiffer has not presented them here, it leaves me underwhelmed. \\
+\indent In addition, I do not believe the study to accurately reflect the true user experiences of the mobile operating systems. For example, utilizing efficiency metrics from Nielsen on iOS 7 shows slower efficiency as the animation transition time between apps has increased \cite{Nielsen}. If that is an important element of a study of usability, then iOS 7's score should reflect that in Pfeiffer's evaluation. \\
+\indent Finally, as mentioned in the background about a rise of importance in contextual computing, Pfeiffer's study ignores this as a metric altogether. As users require a device and operating system that will meet their needs in certain situations, the research proves that these types of things can't be ignored. One good example that was missed completely in this study is the contextually aware Google Now on Android 4.1 and above. Since Samsung phones support this software, it's a shame that Pfeiffer did not take this study further and see its importance to the user. Since context is key in a movable device according to Coutaz et al., Google Now nails this by providing traffic reports on your commute, nearby restaurants around lunch time, and birthday notifications for your closest friends. \cite{GoogleNow} I wholeheartedly agree with what the literature says on contextual computing: having apps you need, when you need them, is a core part of an usable interface in mobile computing. Therefore, a mobile OS that makes use of this should be evaluated more positively, simply because of the increase in efficiency to perform tasks and a reduction in learnability as your device presents what you need in the moments you need them \cite{Nielsen}.
 \section{Conclusion}
-
+The Pfeiffer Consulting study is useful to this study to show a lack of thought and polish put into analyzing the benefits and drawbacks of mobile operating systems today. So many reviewers barely scratch the surface of true evaluation due to ambiguous statistics and opinions that seem like plausible facts. According to past studies, a proven model for a successful mobile operating system is based on an easy implementation for developers and a contextual experience for end-users. By contextual, we mean an experience that correlates with what Nielsen calls strong "usability": highly efficient in context and low learnability and memorability time due to contextual awareness. Reviews such as Pfeiffer's mobile OS evaluation cover some of the core usability elements, but not well. A clear understanding of interaction design and metrics is needed to conduct a study; the details may be simplified to be easier to read for consumers, but the data needs to back the figures up. From what Pfeiffer has provided, it demonstrates a lack of understanding of how to review a mobile OS; but, learning the importance of contextual computing and simplicity in development will determine the future of mobile OS usability.
 \bibliographystyle{alpha}
 \bibliography{mental-model-paper}
 
