--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -9,18 +9,18 @@
 \usepackage{indentfirst}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Evaluating the Mobile Operating System Effectively}
+\title{Evaluating the Mobile Operating System: The Importance of Ease of Implementation and Contextual Computing}
 \author{Edward Bramanti}
 %\date{}                                           % Activate to display a given date or no date
 
 \begin{document}
 \maketitle
 \begin{abstract}
+Evaluation of mobile operating systems is being approached incorrectly due to a lack of proper data collection and evaluation from firms. I propose that there are two factors to evaluating a successful mobile operating system: realizing importance of ease of implementation so that developers can connect their mental process with the end-user's, and that the end-user has a strong implementation of contextual computing in their mobile operating system. These two factors, in their simplest form, present a strong mobile operating system according to research in interaction design. When more complex usability metrics are revealed, the metrics correlate with the two paradigms listed above.
 \end{abstract}
 \pagebreak
 \section{Introduction}
 In today's world, mobile operating systems are now as prevalent as personal computers. More and more consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. As this field has continued to develop, the consumer is given a myriad of choices between many different operating systems. Hardware and software manufacturers have arisen to provide a competitive environment. This has led to successes for user choice, as hardware and software companies square off to provide the most innovative interface.\\
-\indent While this has been a great success for the consumer, it has also caused problems for firms. A series of patent wars between companies has arisen in the past few years, which has demonstrated the desire for monopoly over the market by utilizing the legal system. Paik and Zhu note that "According to this view, technology firms race to assemble patent portfolios - initially for defensive purposes in the context of a dynamic and competitive field - but then, as the industry matures, convert their shields into weapons to eliminate their competitors in pursuit of market dominance with its platform."\cite{PatentWars} This desire to achieve market independence has led many reviewers to create preconceived notions that the market is no longer innovating, but instead creating a "future-proofing" system that fights pointless legal battles to control software innovation.\\
 \indent Because of this new growth in the smartphone market, reviewers are pitting operating system against operating system to help the user discover if it is the best fit for them. The question remains though: Are the journalistic and firm-based reviewers doing an accurate job of evaluating a mobile operating system? In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
 
 \section{Background}
@@ -41,7 +41,7 @@ It is important to realize the designer's role in the evaluation of the success 
 
 \subsection{The End-User Perspective}
 When many go to evaluate and review mobile operating systems, they run unknowingly into the issue of context. During a controlled evaluation, many users may respond in a certain way to an interface. Some may respond in certain ways when placed in certain situations. But at the end of the day, what is the goal of the end-user? The end-user's experience needs to be evaluated contextually, according to Coutaz et al. The end-user value a contextual experience for their experience of an OS on the go. \cite{Coutaz} \\
-\indent So, why is context a part of the end-user perspective that so many seem to gloss over? It's very difficult to gauge an experience contextually. Apps like Aviate for Android are bringing validity to the importance of contextual computing, and are showing a valid area that is being overlooked by reviewers: what users do at certain moments in certain locations. For example, Aviate considers if you are at the coffee shop by pulling your location from GPS services, and displays a new context on the launch screen with things specifically tailored to your current experience. \cite{Aviate} These kind of things matter to the end-user on a mobile operating system. Since the location of a mobile OS is not statically located like desktop operating systems, users will consider context to be essential to the experience, as can be seen in Figure \ref{aviate}. Evaluations of mobile OS' search for this key term, 
+\indent So, why is context a part of the end-user perspective that so many seem to gloss over? It's very difficult to gauge an experience contextually. Apps like Aviate for Android are bringing validity to the importance of contextual computing, and are showing a valid area that is being overlooked by reviewers: what users do at certain moments in certain locations. For example, Aviate considers if you are at the coffee shop by pulling your location from GPS services, and displays a new context on the launch screen with things specifically tailored to your current experience. \cite{Aviate} These kind of things matter to the end-user on a mobile operating system. Since the location of a mobile OS is not statically located like desktop operating systems, users will consider context to be essential to the experience, as can be seen in Figure \ref{aviate}.
 
 \begin{figure}[h]
 \begin{center}
