Title and bib change

--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -9,7 +9,7 @@
 \usepackage{indentfirst}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Evaluating the Mobile Operating System: The Importance of Ease of Implementation and Contextual Computing}
+\title{Evaluating the Mobile Operating System: The Importance of Ease of Implementation \& Contextual Computing}
 \author{Edward Bramanti}
 %\date{}                                           % Activate to display a given date or no date
 
