--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -14,14 +14,14 @@
 %\date{}                                           % Activate to display a given date or no date
 
 \begin{document}
-\maketitle
+\maketitle\
 \begin{abstract}
 Evaluation of mobile operating systems is being approached incorrectly due to a lack of proper data collection and evaluation from firms. I propose that there are two factors to evaluating a successful mobile operating system: realizing importance of ease of implementation so that developers can connect their mental process with the end-user's, and that the end-user has a strong implementation of contextual computing in their mobile operating system. These two factors, in their simplest form, present a strong mobile operating system according to research in interaction design. When more complex usability metrics are revealed, the metrics correlate with the two paradigms listed above.
 \end{abstract}
 \pagebreak
 \section{Introduction}
 In today's world, mobile operating systems are now as prevalent as personal computers. More and more consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. As this field has continued to develop, the consumer is given a myriad of choices between many different operating systems. Hardware and software manufacturers have arisen to provide a competitive environment. This has led to successes for user choice, as hardware and software companies square off to provide the most innovative interface.\\
-\indent Because of this new growth in the smartphone market, reviewers are pitting operating system against operating system to help the user discover if it is the best fit for them. The question remains though: Are the journalistic and firm-based reviewers doing an accurate job of evaluating a mobile operating system? In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
+\indent Because of this new growth in the smartphone market, revisersn are pitting operating system against operating system to help the user discover if it is the best fit for them. The question remains though: Are the journalistic and firm-based reviewers doing an accurate job of evaluating a mobile operating system? In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
 
 \section{Background}
 \label{background}
@@ -55,7 +55,8 @@ When many go to evaluate and review mobile operating systems, they run unknowing
 \section{Methods}
 Now that we have filled in the background of developer and end-user perspective with past research, we can now effectively evaluate Pfeiffer Consulting's Mobile OS evaluation. Pfeiffer evaluates four "usability metrics" in a way that they describe as a "look at aspects that have a direct impact on the day-to-day user experience of an average, non-technical user." \cite{Pfeiffer} The four metrics they are analyzing will be evaluated as compared to the background found in Section \ref{background}.
 \subsection{Cognitive Load Evaluation}
-Pfeiffer takes a survey over a term they have coined "cognitive load," which "countedthe number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} Pfeiffer uses this in their argument that the lower the cognitive load, the easier it will be for a user to navigate the operating system, at the cost of features. They define this as "the number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} The first problem that this survey runs into, when compared to background, is how contextual computing can nullify a cognitive load test. If the end-user has an interface that is contextual (in the case of this survey, say they are using Aviate on their Samsung Android device) then the extra apps are not a hindrance, but represent a low cognitive load. The apps you need only appear based on context, which makes this survey a little difficult to quantify. \\
+Pfeiffer takes a survey over a term they have coined "cognitive load," which "counted
+the number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} Pfeiffer uses this in their argument that the lower the cognitive load, the easier it will be for a user to navigate the operating system, at the cost of features. They define this as "the number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} The first problem that this survey runs into, when compared to background, is how contextual computing can nullify a cognitive load test. If the end-user has an interface that is contextual (in the case of this survey, say they are using Aviate on their Samsung Android device) then the extra apps are not a hindrance, but represent a low cognitive load. The apps you need only appear based on context, which makes this survey a little difficult to quantify. \\
 \indent In addition to this, a lower cognitive load proves to not necessarily be better or worse for the OS. Even though iOS 7 had a higher cognitive load than iOS 6, it still scored higher overall. Pfeiffer Consulting's study shows that cognitive load has no correlation with ease of use for the user, which invalidates this part of the study (which is supposed to be evaluative).
 \subsection{Efficiency and Integration Evaluation}
 Pfeiffer's second part of their Mobile OS evaluation is a study of "efficiency" and "integration," mapping out the user's access to key points of the operating system on a rating scale from 0 to 10. From a usability metrics measurement of efficiency, it inaccurately follows interaction design principles. According to usability consultant Jakob Nielsen, "efficiency is based on speed of performance once one has learned the tasks." \cite{Nielsen} Since this is normally measured in time, the evaluation shows a lack of detail that should not be omitted. Since efficiency is measured in time, representing the time to access certain features would be more revealing. For example, some mobile operating systems are criticized for lacking features others have, but it does not necessarily mean that the implementations that are made have a given benefit of efficiency.
@@ -69,11 +70,13 @@ Pfeiffer's second part of their Mobile OS evaluation is a study of "efficiency" 
 \subsection{Customization Evaluated}
 The third part of the study dives deep into evaluating the customization merits of the chosen mobile operating systems. Out of all the sections of the evaluative study, according to background information this seems to be the most reliable of the studies. Customization depends on a direct comparison of the given operating system features, and even though measured on a 10 point scale once again, the scores are clearly outlined with a "why." Customization falls under satisfaction, which is why a 10 point scale is a strongly supported metric to use when evaluating customization. Users who are more satisfied with customization should consider an Android phone. Pfeiffer does not explain what low customization means for the user in their evaluation though. If customization is low, the ease of use for apps could become difficult for the user. As ease of use becomes difficult for the user, it can also be difficult to implement apps for developers, as accessing features may be restricted by a lack of customization in the mobile OS. Pfeiffer needs to more clearly present this in their evaluation, as the Background section connects ease of use for consumers with ease of implementation for developers.
 \subsection{User Experience Friction Evaluation}
-This final part of the study attempts to evaluate frustrations users have with mobile operating systems. From an interaction design standpoint, it does not study what Nielsen refers to as "errors" in his usability metrics with a concise approach \cite{Nielsen}. Instead, this part of the study evaluates learnability; if something is hard to figure out, it gives it a high rating, and if easier, it receives a lower score. Therefore, this is not a study in errors as Pfeiffer outlines it to be. Instead, this list of user experience friction is a study in learnability, and which OS is easiest to learn overall. It also irrelevantly points out lacking features when it presents no standard for what features a smartphone should have. For example, the importantance of usefulness in a situation (contextual computing) is not even mentioned in this part of the study. As users become more dependent on mobile operating systems to be contextual, 
+This final part of the study attempts to evaluate frustrations users have with mobile operating systems. From an interaction design standpoint, it does not study what Nielsen refers to as "errors" in his usability metrics with a concise approach \cite{Nielsen}. Instead, this part of the study evaluates learnability; if something is hard to figure out, it gives it a high rating, and if easier, it receives a lower score. Therefore, this is not a study in errors as Pfeiffer outlines it to be. Instead, this list of user experience friction is a study in learnability, and which OS is easiest to learn overall. It also irrelevantly points out lacking features when it presents no standard for what features a smartphone should have. For example, the importance of usefulness in a situation (contextual computing) is not even mentioned in this part of the study. As users become more dependent on mobile operating systems to be contextual, this will become harder and harder for a successful evaluation to ignore as a metric. Is it very interconnected to usability methods such as learnability and efficiency, and will only increase them depending on situation.
 \section{Discussion}
 Overall, I find Pfeiffer Consulting's evaluation of the current state of mobile operating systems to be confusing, incomplete, and lacking in detail. To begin, there is a lack of raw data presented in the study. Arbitrary values are assigned to metrics everywhere, and the unsuspecting reader will take these studies for granted. Pfeiffer does say that they want this to be a simple presentation of usability for average, non-technical users, but anyone interested in true evaluation will have the statistics to back up the data. Since Pfeiffer has not presented them here, it leaves me underwhelmed. \\
 \indent In addition, I do not believe the study to accurately reflect the true user experiences of the mobile operating systems. For example, utilizing efficiency metrics from Nielsen on iOS 7 shows slower efficiency as the animation transition time between apps has increased \cite{Nielsen}. If that is an important element of a study of usability, then iOS 7's score should reflect that in Pfeiffer's evaluation. \\
 \indent Finally, as mentioned in the background about a rise of importance in contextual computing, Pfeiffer's study ignores this as a metric altogether. As users require a device and operating system that will meet their needs in certain situations, the research proves that these types of things can't be ignored. One good example that was missed completely in this study is the contextually aware Google Now on Android 4.1 and above. Since Samsung phones support this software, it's a shame that Pfeiffer did not take this study further and see its importance to the user. Since context is key in a movable device according to Coutaz et al., Google Now nails this by providing traffic reports on your commute, nearby restaurants around lunch time, and birthday notifications for your closest friends. \cite{GoogleNow} I wholeheartedly agree with what the literature says on contextual computing: having apps you need, when you need them, is a core part of an usable interface in mobile computing. Therefore, a mobile OS that makes use of this should be evaluated more positively, simply because of the increase in efficiency to perform tasks and a reduction in learnability as your device presents what you need in the moments you need them \cite{Nielsen}.
+\subsection{Laterality Lecture Commentary}
+The study of cognitive psychology has an important relation to my current topic. Cognitive psychologists study many different objects and behaviors, including patients with localized brain injury and split-brain patients. The subject of study is important to interaction design because of how we comprehend the user interface. For example, functional hemispheric difference plays to different strengths and weaknesses of the user's brain, and finding a well-rounded experience that works for every user is essential to the success of an application. Cognitive psychologists test patients to show which hemispheres can accomplish in isolation so they may better help the patient through treatment. Without this, they would not be able to help a patient through brain isolation. Neuroimaging is also used to help a cognitive psychologist better understand the scientific aspects of the patient's condition. These methods of study relate in some ways to how the mobile OS should be evaluated. A successful brain should be able to think contextually, and learning should be simple depending on the context of the situation. Interaction design is all about understanding the connection between developer and user mental models; once this is achieved, success is found in user interface design. In the same ways, a cognitive psychologist understanding the mental model of a patient will help them to better treat them. It represents evaluation in the real world, beyond the mobile operating system.
 \section{Conclusion}
 The Pfeiffer Consulting study is useful to this study to show a lack of thought and polish put into analyzing the benefits and drawbacks of mobile operating systems today. So many reviewers barely scratch the surface of true evaluation due to ambiguous statistics and opinions that seem like plausible facts. According to past studies, a proven model for a successful mobile operating system is based on an easy implementation for developers and a contextual experience for end-users. By contextual, we mean an experience that correlates with what Nielsen calls strong "usability": highly efficient in context and low learnability and memorability time due to contextual awareness. Reviews such as Pfeiffer's mobile OS evaluation cover some of the core usability elements, but not well. A clear understanding of interaction design and metrics is needed to conduct a study; the details may be simplified to be easier to read for consumers, but the data needs to back the figures up. From what Pfeiffer has provided, it demonstrates a lack of understanding of how to review a mobile OS; but, learning the importance of contextual computing and simplicity in development will determine the future of mobile OS usability.
 \bibliographystyle{alpha}
