Final Edits of Mental Model Research Paper

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -2,11 +2,12 @@
 % A BibTeX database file.
 
 @article{
-	Pfeiffer,
-	author = {Pfeiffer Consulting},
-	title = {How iOS 7 Stacks Up: Smartphone OS User Experience Shootout},
-	publisher = {Pfeiffer Consulting},
-	year = {2013}
+Pfeiffer,
+author = {Pfeiffer Consulting},
+title = {How iOS 7 Stacks Up: Smartphone OS User Experience Shootout},
+journal = {Pfeiffer Consulting},
+publisher = {Pfeiffer Consulting},
+year = {2013}
 }
 
 @inproceedings{
@@ -50,27 +51,27 @@
 
 @misc{
 Aviate,
-    author = {Martin Bryant},
-    title = {Aviate: A gorgeous and smart new Android homescreen built for the age of context},
-    url = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/},
-    howpublished = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/}
+author = {Martin Bryant},
+title = {Aviate: A gorgeous and smart new Android homescreen built for the age of context},
+url = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/},
+howpublished = {http://thenextweb.com/apps/2013/10/15/aviate-a-smart-new-android-homescreen-built-for-the-age-of-context/}
 }
 
 @misc {
-	GoogleNow,
-	author = {Kelly Hodgkins},
-	title = {Google Now brings contextual search and on-the-fly reminders to Android 4.1},
-	url = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/},
-	howpublished = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/}
+GoogleNow,
+author = {Kelly Hodgkins},
+title = {Google Now brings contextual search and on-the-fly reminders to Android 4.1},
+url = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/},
+howpublished = {http://www.intomobile.com/2012/06/27/google-now-brings-contextual-search-and-onthefly-reminders-android-41/}
 }
 
 @book{
- Nielsen,
- author = {Nielsen, Jakob},
- title = {Usability Engineering},
- year = {1993},
- isbn = {0125184050},
- publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
+Nielsen,
+author = {Nielsen, Jakob},
+title = {Usability Engineering},
+year = {1993},
+isbn = {0125184050},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
 } 
 
