--- a/mental-model-paper/mental-model-paper.tex
+++ b/mental-model-paper/mental-model-paper.tex
@@ -9,9 +9,8 @@
 \usepackage{indentfirst}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Evaluating the Mobile Operating System: The Importance of Ease of Implementation \& Contextual Computing}
+\title{Evaluating the Mobile Operating System: The Importance of Contextual Computing \& Ease of Implementation}
 \author{Edward Bramanti}
-%\date{}                                           % Activate to display a given date or no date
 
 \begin{document}
 \maketitle\
@@ -20,12 +19,12 @@ Evaluation of mobile operating systems is being approached incorrectly due to a 
 \end{abstract}
 \pagebreak
 \section{Introduction}
-In today's world, mobile operating systems are now as prevalent as personal computers. More and more consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. As this field has continued to develop, the consumer is given a myriad of choices between many different operating systems. Hardware and software manufacturers have arisen to provide a competitive environment. This has led to successes for user choice, as hardware and software companies square off to provide the most innovative interface.\\
-\indent Because of this new growth in the smartphone market, revisersn are pitting operating system against operating system to help the user discover if it is the best fit for them. The question remains though: Are the journalistic and firm-based reviewers doing an accurate job of evaluating a mobile operating system? In particular, we will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today, and how focusing on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
+In today's world, mobile operating systems are now as prevalent as personal computers. More consumers are turning to smartphones and tablets to daily drive their time spent in productivity as well as entertainment. As mobile technology has continued to develop, the consumer is given a myriad of choices between many different operating systems. Hardware and software manufacturers have arisen to provide a competitive environment. This has led to successes for user choice, as hardware and software companies square off to provide the most innovative interface.\\
+\indent Because of this growth, professional firms and reviewers are pitting operating system against operating system to help the user discover if it is the best fit for them. The question remains though: Are the journalistic and firm-based reviewers doing an accurate job of evaluating a mobile operating system? This particular study will be taking a look at Pfeiffer Consulting's "Mobile OS User Experience Shootout" as a reference for how companies conduct evaluations of mobile operating systems today. The study focuses on certain things that connect consumers and developers together through mental process will increase reasoning and understanding behind the results collected from users.
 
 \section{Background}
 \label{background}
-To provide background on how evaluations of a mobile operating system should be performed, we will look at the data from the two most important points of view: first, the developer; and then, the consumer, or end-user. Seeing how the developer analyzes the operating system versus the end-user will help to provide a bridge between the mental thought process of the two, and will provide those observing a foundation for how to approach reviewing a mobile operating system effectively.
+To provide background on how evaluations of a mobile operating system should be performed, we will look at the data from the two most important points of view: first, the developer; and then, the end-user, or consumer. Seeing how the developer analyzes the operating system versus the end-user will help to provide a bridge between the mental thought process of the two, and will provide those observing a foundation for how to approach reviewing a mobile operating system effectively.
 \subsection{The Developer Perspective}
 Why is the developer's perspective important to evaluating a mobile operating system? Developers are essential to any platform building its ecosystem, and a mobile operating system is no exception. In addition, understanding the developer's thought process will be invaluable to hearing the other side of the story, since some evaluations of mobile OS' occur only through the eyes of the end user (Pfeiffer's report is an example). \\
 \indent So how do developers evaluate mobile operating systems, and choose which is the best to design for? Palme et al. state that there are six dimensions to how a developer decides on the best mobile operating system for them: "corporate buyer choice, consumer buyer choice, OS vendor's market growth potential, ease of implementation, security, and revenue." \cite{Palme} Specifically, ease of implementation is one factor to focus on in determining if a mobile OS is successful. Evaluators generally overlook this, because they focus on the ease of use for consumer instead of the ease of implementation for the developer. Besides, the end-user never sees the developer's thought process, right? This is a common misconception amongst reviewers of mobile OS functionality. The developer's job is to mesh his mental model of how something should work with the user's model. Interaction design itself is defined this way: "A system's designer/developer must effectively communicate his mental model of the system to the system's users through the "image" presented by that system." Therefore, if the "terms and 
@@ -53,7 +52,7 @@ When many go to evaluate and review mobile operating systems, they run unknowing
 
 
 \section{Methods}
-Now that we have filled in the background of developer and end-user perspective with past research, we can now effectively evaluate Pfeiffer Consulting's Mobile OS evaluation. Pfeiffer evaluates four "usability metrics" in a way that they describe as a "look at aspects that have a direct impact on the day-to-day user experience of an average, non-technical user." \cite{Pfeiffer} The four metrics they are analyzing will be evaluated as compared to the background found in Section \ref{background}.
+Now that we have filled in the background of developer and end-user perspective with past research, we can now effectively evaluate Pfeiffer Consulting's Mobile OS evaluation. Pfeiffer evaluates four "usability metrics" that they describe as a "look at aspects that have a direct impact on the day-to-day user experience of an average, non-technical user." \cite{Pfeiffer} The four metrics they are analyzing will be evaluated as compared to the background found in Section \ref{background}.
 \subsection{Cognitive Load Evaluation}
 Pfeiffer takes a survey over a term they have coined "cognitive load," which "counted
 the number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} Pfeiffer uses this in their argument that the lower the cognitive load, the easier it will be for a user to navigate the operating system, at the cost of features. They define this as "the number of apps/widgets as well as other icons and user interface elements a default installation of the operating system contains." \cite{Pfeiffer} The first problem that this survey runs into, when compared to background, is how contextual computing can nullify a cognitive load test. If the end-user has an interface that is contextual (in the case of this survey, say they are using Aviate on their Samsung Android device) then the extra apps are not a hindrance, but represent a low cognitive load. The apps you need only appear based on context, which makes this survey a little difficult to quantify. \\
@@ -68,17 +67,17 @@ Pfeiffer's second part of their Mobile OS evaluation is a study of "efficiency" 
 \end{center}
 \end{figure}
 \subsection{Customization Evaluated}
-The third part of the study dives deep into evaluating the customization merits of the chosen mobile operating systems. Out of all the sections of the evaluative study, according to background information this seems to be the most reliable of the studies. Customization depends on a direct comparison of the given operating system features, and even though measured on a 10 point scale once again, the scores are clearly outlined with a "why." Customization falls under satisfaction, which is why a 10 point scale is a strongly supported metric to use when evaluating customization. Users who are more satisfied with customization should consider an Android phone. Pfeiffer does not explain what low customization means for the user in their evaluation though. If customization is low, the ease of use for apps could become difficult for the user. As ease of use becomes difficult for the user, it can also be difficult to implement apps for developers, as accessing features may be restricted by a lack of customization in the mobile OS. Pfeiffer needs to more clearly present this in their evaluation, as the Background section connects ease of use for consumers with ease of implementation for developers.
+The third part of the study dives deep into evaluating the customization merits of the chosen mobile operating systems. Out of all the sections of the evaluative study, this seems to be the most reliable of the studies. Customization depends on a direct comparison of the given operating system features, and even though measured on a 10 point scale once again, the scores are clearly outlined with a "why." Customization falls under satisfaction, which is why a 10 point scale is a strongly supported metric to use when evaluating customization. Users who are more satisfied with customization should consider an Android phone. Pfeiffer does not explain what low customization means for the user in their evaluation though. If customization is low, the ease of use for apps could become difficult for the user. As ease of use becomes difficult for the user, it can also be difficult to implement apps for developers, as accessing features may be restricted by a lack of customization in the mobile OS. Pfeiffer needs to more clearly present this in their evaluation, as the Background section connects ease of use for consumers with ease of implementation for developers.
 \subsection{User Experience Friction Evaluation}
 This final part of the study attempts to evaluate frustrations users have with mobile operating systems. From an interaction design standpoint, it does not study what Nielsen refers to as "errors" in his usability metrics with a concise approach \cite{Nielsen}. Instead, this part of the study evaluates learnability; if something is hard to figure out, it gives it a high rating, and if easier, it receives a lower score. Therefore, this is not a study in errors as Pfeiffer outlines it to be. Instead, this list of user experience friction is a study in learnability, and which OS is easiest to learn overall. It also irrelevantly points out lacking features when it presents no standard for what features a smartphone should have. For example, the importance of usefulness in a situation (contextual computing) is not even mentioned in this part of the study. As users become more dependent on mobile operating systems to be contextual, this will become harder and harder for a successful evaluation to ignore as a metric. Is it very interconnected to usability methods such as learnability and efficiency, and will only increase them depending on situation.
 \section{Discussion}
-Overall, I find Pfeiffer Consulting's evaluation of the current state of mobile operating systems to be confusing, incomplete, and lacking in detail. To begin, there is a lack of raw data presented in the study. Arbitrary values are assigned to metrics everywhere, and the unsuspecting reader will take these studies for granted. Pfeiffer does say that they want this to be a simple presentation of usability for average, non-technical users, but anyone interested in true evaluation will have the statistics to back up the data. Since Pfeiffer has not presented them here, it leaves me underwhelmed. \\
+Overall, I find Pfeiffer Consulting's evaluation of the current state of mobile operating systems to be confusing, incomplete, and lacking in detail. To begin, there is a lack of raw data presented in the study. Arbitrary values are assigned to metrics everywhere, and the unsuspecting reader will take these studies for granted. Pfeiffer does say that they want this to be a simple presentation of usability for average, non-technical users; nevertheless, anyone interested in true evaluation will have the statistics to back up the data. Since Pfeiffer has not presented them here, it leaves me underwhelmed. \\
 \indent In addition, I do not believe the study to accurately reflect the true user experiences of the mobile operating systems. For example, utilizing efficiency metrics from Nielsen on iOS 7 shows slower efficiency as the animation transition time between apps has increased \cite{Nielsen}. If that is an important element of a study of usability, then iOS 7's score should reflect that in Pfeiffer's evaluation. \\
 \indent Finally, as mentioned in the background about a rise of importance in contextual computing, Pfeiffer's study ignores this as a metric altogether. As users require a device and operating system that will meet their needs in certain situations, the research proves that these types of things can't be ignored. One good example that was missed completely in this study is the contextually aware Google Now on Android 4.1 and above. Since Samsung phones support this software, it's a shame that Pfeiffer did not take this study further and see its importance to the user. Since context is key in a movable device according to Coutaz et al., Google Now nails this by providing traffic reports on your commute, nearby restaurants around lunch time, and birthday notifications for your closest friends. \cite{GoogleNow} I wholeheartedly agree with what the literature says on contextual computing: having apps you need, when you need them, is a core part of an usable interface in mobile computing. Therefore, a mobile OS that makes use of this should be evaluated more positively, simply because of the increase in efficiency to perform tasks and a reduction in learnability as your device presents what you need in the moments you need them \cite{Nielsen}.
 \subsection{Laterality Lecture Commentary}
 The study of cognitive psychology has an important relation to my current topic. Cognitive psychologists study many different objects and behaviors, including patients with localized brain injury and split-brain patients. The subject of study is important to interaction design because of how we comprehend the user interface. For example, functional hemispheric difference plays to different strengths and weaknesses of the user's brain, and finding a well-rounded experience that works for every user is essential to the success of an application. Cognitive psychologists test patients to show which hemispheres can accomplish in isolation so they may better help the patient through treatment. Without this, they would not be able to help a patient through brain isolation. Neuroimaging is also used to help a cognitive psychologist better understand the scientific aspects of the patient's condition. These methods of study relate in some ways to how the mobile OS should be evaluated. A successful brain should be able to think contextually, and learning should be simple depending on the context of the situation. Interaction design is all about understanding the connection between developer and user mental models; once this is achieved, success is found in user interface design. In the same ways, a cognitive psychologist understanding the mental model of a patient will help them to better treat them. It represents evaluation in the real world, beyond the mobile operating system.
 \section{Conclusion}
-The Pfeiffer Consulting study is useful to this study to show a lack of thought and polish put into analyzing the benefits and drawbacks of mobile operating systems today. So many reviewers barely scratch the surface of true evaluation due to ambiguous statistics and opinions that seem like plausible facts. According to past studies, a proven model for a successful mobile operating system is based on an easy implementation for developers and a contextual experience for end-users. By contextual, we mean an experience that correlates with what Nielsen calls strong "usability": highly efficient in context and low learnability and memorability time due to contextual awareness. Reviews such as Pfeiffer's mobile OS evaluation cover some of the core usability elements, but not well. A clear understanding of interaction design and metrics is needed to conduct a study; the details may be simplified to be easier to read for consumers, but the data needs to back the figures up. From what Pfeiffer has provided, it demonstrates a lack of understanding of how to review a mobile OS; but, learning the importance of contextual computing and simplicity in development will determine the future of mobile OS usability.
+The Pfeiffer Consulting study is useful to this study to show a lack of thought and polish put into analyzing the benefits and drawbacks of mobile operating systems today. So many reviewers barely scratch the surface of true evaluation due to ambiguous statistics and opinions that seem like plausible facts. According to past studies, a proven model for a successful mobile operating system is based on an easy implementation for developers and a contextual experience for end-users. By contextual, we mean an experience that correlates with what Nielsen calls strong "usability": highly efficient in context and low learnability and memorability time due to contextual awareness. Reviews such as Pfeiffer's mobile OS evaluation cover some of the core usability elements, but not well. A clear understanding of interaction design and metrics is needed to conduct a study; the details may be simplified to be easier to read for consumers, but the data needs to back the figures up. From what Pfeiffer has provided, it demonstrates a lack of understanding of how to review a mobile OS; but, evaluating the importance of contextual computing and simplicity in development will determine the future of mobile OS usability.
 \bibliographystyle{alpha}
 \bibliography{mental-model-paper}
 
