Inline comments and notes for assignment 1105.

--- a/mental-model-paper/mental-model-paper.bib
+++ b/mental-model-paper/mental-model-paper.bib
@@ -49,6 +49,8 @@ year = {2013}
  address = {New York, NY, USA},
 } 
 
+% JD: Your @misc entries need a year.  Based on the URLs, those actually
+%     look pretty easy to infer :)
 @misc{
 Aviate,
 author = {Martin Bryant},
