Added overall winner to usability study

--- a/usability-study/usability-metrics/usability-metrics.tex
+++ b/usability-study/usability-metrics/usability-metrics.tex
@@ -261,8 +261,24 @@ The learnability for the list filtering did not come to a real clear winner. Eve
 %     performing the action?  The first part is learnability; the second is efficiency.
 
 \section{Overall Analysis}
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 3.53 & 58.918s & 7.86 \\ \hline
+    eBay & 3.4 & 51.46s & 6.76 \\ \hline
+    Shopzilla & 3.4 & 36.7s & 6 \\ \hline
+\end{tabular}
 
 According to the results, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
+
+% EB/AK: Added an overall winner explanation.
+
+Now looking at the table with all of the measurements averaged, we have a compelling reason for why one shopping site comes out on top. Overall the trend seems to be that as a certain shopping site are easier to use, the less happy the user tends to be. This is because the sites that take longer to learn have better functionality. Users are rewarded by learning the methods of the website. Amazon's experience is the best overall; it focuses more on satisfaction through a personalized experience.
+
+Subjective satisfaction is a priority for each and every one of these sites. Since each of them are a service for customers, their main goal is for their customers to have a good experience. Of course, an efficient website can make  tasks easier and a learnable site will allow the customer to access products faster. Nevertheless, if a customer lacks satisfaction during a shopping experience, they become less likely to buy any items, regardless of how efficient or learnable the interface is. 
+
+According to the metrics, Amazon yields the highest satisfaction of the three websites for different tasks, even though it is lacking in efficiency and learnability. Since users are satisfied using the website, they are more likely to learn the interface and overlook the more slightly complex interface. If satisfaction is of key importance when considering how to design a shopping website, then Amazon represents a \textbf{strong} model to base a design off of.
+
 % JD: Appropriate conclusion given the measures that were taken.  As noted, the
 %     measures themselves are a little murky.
 %
