Modified .gitignore for LaTeXTools

--- a/usability-study/usability-metrics/usability-metrics.tex
+++ b/usability-study/usability-metrics/usability-metrics.tex
@@ -269,7 +269,7 @@ The learnability for the list filtering did not come to a real clear winner. Eve
     Shopzilla & 3.4 & 36.7s & 6 \\ \hline
 \end{tabular}
 
-According to the results, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
+According to the reslults, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
 
 % EB/AK: Added an overall winner explanation.
 
